# TVAE

./: .gitignore  Leoleo_Iteration1_DiscriminationInjection.ipynb  Leoleo_Iteration1_VAE.ipynb  README.md  pyproject.toml
tests/: Leoleo_Iteration1_DiscriminationInjection.ipynb  test.py  test2.ipynb  testing_vae.ipynb
tvae/: __init__.py  loss.py  metrics.py  model.py  optim.py  paths.py  utils.py
